attempt to fix default highlight position on iPhone

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,12 @@
 
 .Highlight {
   background-color: rgba(255, 255, 255, 0.75);
+  box-sizing: border-box;
   font-size: 0.75rem;
   line-height: 1.2rem;
   padding: 0rem 0.5rem;
   position: absolute;
-  max-width: 65%;
+  max-width: 70%;
 }
 
 .Next {
